Add new dataset

--- a/src/experiments/IR_with_LSI.ipynb
+++ b/src/experiments/IR_with_LSI.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0e73b0aa",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1296f1b6",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "57ae9260",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "012aace9",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6426aa96",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e7d0fd87",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ff851064",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "2df00a78-94cd-41c1-b12b-a4e07b09f176",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../data/d1/doc_embeddings_d1.pkl\", \"rb\") as f:\n",
+    "    documents = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3cd75238-6f49-417c-837b-fd739b787617",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "document_ids = list(documents.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f389e103-697d-4273-9668-f50e05a07f34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_documents = [documents[doc][\"text\"] for doc in documents]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d43904c5-31ae-40f2-a08f-0c7bdd327a3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../data/d1/query_embeddings_d1.pkl\", \"rb\") as f:\n",
+    "    queries = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "49a2004b-4ad3-4b5b-9bed-fd8bbdf65613",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_ids = list(queries.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b864bf6a-f903-47e7-adba-f40ea5e00c81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_queries = [queries[q][\"text\"] for q in queries]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "20c00c90-73ad-4b28-854a-5db35a3e7196",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2000, 1406)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(clean_documents), len(clean_queries)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
+   "id": "69d6839b-12c4-4a5f-b6a6-611e2617cfdd",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('test-environment-aeghhgwpe-pro02b',\n",
+       " \"You don’t have to be vegetarian to be green. Many special environments have been created by livestock farming – for example chalk down land in England and mountain pastures in many countries. Ending livestock farming would see these areas go back to woodland with a loss of many unique plants and animals. Growing crops can also be very bad for the planet, with fertilisers and pesticides polluting rivers, lakes and seas. Most tropical forests are now cut down for timber, or to allow oil palm trees to be grown in plantations, not to create space for meat production.  British farmer and former editor Simon Farrell also states: “Many vegans and vegetarians rely on one source from the U.N. calculation that livestock generates 18% of global carbon emissions, but this figure contains basic mistakes. It attributes all deforestation from ranching to cattle, rather than logging or development. It also muddles up one-off emissions from deforestation with on-going pollution.”  He also refutes the statement of meat production inefficiency: “Scientists have calculated that globally the ratio between the amounts of useful plant food used to produce meat is about 5 to 1. If you feed animals only food that humans can eat — which is, indeed, largely the case in the Western world — that may be true. But animals also eat food we can't eat, such as grass. So the real conversion figure is 1.4 to 1.” [1] At the same time eating a vegetarian diet may be no more environmentally friendly than a meat based diet if it is not sustainably sourced or uses perishable fruit and vegetables that are flown in from around the world. Eating locally sourced food can has as big an impact as being vegetarian. [2]  [1] Tara Kelly, Simon Fairlie: How Eating Meat Can Save the World, 12 October 2010  [2] Lucy Siegle, ‘It is time to become a vegetarian?’ The Observer, 18th May 2008\",\n",
+       " 'test-environment-aeghhgwpe-pro02a',\n",
+       " \"Being vegetarian helps the environment  Becoming a vegetarian is an environmentally friendly thing to do. Modern farming is one of the main sources of pollution in our rivers. Beef farming is one of the main causes of deforestation, and as long as people continue to buy fast food in their billions, there will be a financial incentive to continue cutting down trees to make room for cattle. Because of our desire to eat fish, our rivers and seas are being emptied of fish and many species are facing extinction. Energy resources are used up much more greedily by meat farming than my farming cereals, pulses etc. Eating meat and fish not only causes cruelty to animals, it causes serious harm to the environment and to biodiversity. For example consider Meat production related pollution and deforestation  At Toronto’s 1992 Royal Agricultural Winter Fair, Agriculture Canada displayed two contrasting statistics: “it takes four football fields of land (about 1.6 hectares) to feed each Canadian” and “one apple tree produces enough fruit to make 320 pies.” Think about it — a couple of apple trees and a few rows of wheat on a mere fraction of a hectare could produce enough food for one person! [1]  The 2006 U.N. Food and Agriculture Organization (FAO) report concluded that worldwide livestock farming generates 18% of the planet's greenhouse gas emissions — by comparison, all the world's cars, trains, planes and boats account for a combined 13% of greenhouse gas emissions. [2]  As a result of the above point producing meat damages the environment. The demand for meat drives deforestation. Daniel Cesar Avelino of Brazil's Federal Public Prosecution Office says “We know that the single biggest driver of deforestation in the Amazon is cattle.” This clearing of tropical rainforests such as the Amazon for agriculture is estimated to produce 17% of the world's greenhouse gas emissions. [3] Not only this but the production of meat takes a lot more energy than it ultimately gives us chicken meat production consumes energy in a 4:1 ratio to protein output; beef cattle production requires an energy input to protein output ratio of 54:1.  The same is true with water use due to the same phenomenon of meat being inefficient to produce in terms of the amount of grain needed to produce the same weight of meat, production requires a lot of water. Water is another scarce resource that we will soon not have enough of in various areas of the globe. Grain-fed beef production takes 100,000 liters of water for every kilogram of food. Raising broiler chickens takes 3,500 liters of water to make a kilogram of meat. In comparison, soybean production uses 2,000 liters for kilogram of food produced; rice, 1,912; wheat, 900; and potatoes, 500 liters. [4] This is while there are areas of the globe that have severe water shortages. With farming using up to 70 times more water than is used for domestic purposes: cooking and washing. A third of the population of the world is already suffering from a shortage of water. [5] Groundwater levels are falling all over the world and rivers are beginning to dry up. Already some of the biggest rivers such as China’s Yellow river do not reach the sea. [6]  With a rising population becoming vegetarian is the only responsible way to eat.  [1] Stephen Leckie, ‘How Meat-centred Eating Patterns Affect Food Security and the Environment’, International development research center  [2] Bryan Walsh, Meat: Making Global Warming Worse, Time magazine, 10 September 2008 .  [3] David Adam, Supermarket suppliers ‘helping to destroy Amazon rainforest’, The Guardian, 21st June 2009.  [4] Roger Segelken, U.S. could feed 800 million people with grain that livestock eat, Cornell Science News, 7th August 1997.  [5] Fiona Harvey, Water scarcity affects one in three, FT.com, 21st August 2003  [6] Rupert Wingfield-Hayes, Yellow river ‘drying up’, BBC News, 29th July 2004\")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "document_ids[0], clean_documents[0], query_ids[0], clean_queries[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e5e6f6ad",
    "metadata": {},
    "outputs": [],
@@ -196,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4ee08ca3",
    "metadata": {},
    "outputs": [],
@@ -206,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "91acea8d",
    "metadata": {},
    "outputs": [],
@@ -223,42 +332,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
+   "id": "4b5b9dac-6872-4027-a268-3925692ea621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents_reduced_dict = {id: vector for id, vector in zip(document_ids, documents_reduced)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "de1a668d-b198-45ae-a111-49fcaab9f0eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queries_reduced_dict = {id: vector for id, vector in zip(query_ids, queries_reduced)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "9d40f92c-1fde-49de-912e-8774937c4a8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./backups/lsi/documents.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(documents_reduced, f)\n",
+    "with open(\"./backups/lsi/d1/documents.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(documents_reduced_dict, f)\n",
     "\n",
-    "with open(\"./backups/lsi/queries.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(queries_reduced, f)"
+    "with open(\"./backups/lsi/d1/queries.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(queries_reduced_dict, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "47d25a6d-9653-49b6-a93e-be87675b5993",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1460, 100), (112, 100))"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "documents_reduced.shape, queries_reduced.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "d9d27f01",
    "metadata": {},
    "outputs": [
@@ -266,7 +374,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing similarity scores: 112it [00:01, 74.68it/s]\n"
+      "Computing similarity scores: 1406it [00:09, 154.94it/s]\n"
      ]
     }
    ],
@@ -286,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "f17d12c1",
    "metadata": {},
    "outputs": [],
@@ -315,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "419f549f",
    "metadata": {},
    "outputs": [],
@@ -331,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "5758cba2",
    "metadata": {},
    "outputs": [],
@@ -344,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "a1be5a51",
    "metadata": {},
    "outputs": [],
@@ -356,42 +464,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "fa6bd63c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.8267857142857143, 0.0026550600972566284, 1.0)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mean_precision_at_k, mean_recall_at_k, mean_ndcg_at_k"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "414b9976",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8482142857142857"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sps = np.mean([precision_at_k(preds,label,k=1) for preds,label in zip(predictions,ground_truth)])\n",
     "sps"
