--- a/src/experiments/OpenAI LLM - With LSI RAG - CISI.ipynb
+++ b/src/experiments/OpenAI LLM - With LSI RAG - CISI.ipynb
@@ -22,12 +22,13 @@
     "from operator import itemgetter\n",
     "from langchain.embeddings import OpenAIEmbeddings\n",
     "from langchain.schema.runnable import RunnablePassthrough\n",
-    "from langchain.vectorstores import FAISS"
+    "from langchain.vectorstores import FAISS\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "4de2cd29-c1f6-4a98-b843-c2fc4961c6a8",
    "metadata": {},
    "outputs": [],
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "09a1864e-1407-419a-a5a6-9643a32c4234",
    "metadata": {},
    "outputs": [],
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "53d7d888-6520-4f05-a471-693db3de55ea",
    "metadata": {},
    "outputs": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "6126b150-171e-47fb-834f-2e2bcb8720bf",
    "metadata": {},
    "outputs": [
@@ -110,7 +111,7 @@
        "\".W\\n   The present study is a history of the DEWEY Decimal\\nClassification.  The first edition of the DDC was published\\nin 1876, the eighteenth edition in 1971, and future editions\\nwill continue to appear as needed.  In spite of the DDC's\\nlong and healthy life, however, its full story has never\\nbeen told.  There have been biographies of Dewey\\nthat briefly describe his system, but this is the first\\nattempt to provide a detailed history of the work that\\nmore than any other has spurred the growth of\\nlibrarianship in this country and abroad.\\n\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "30166860-696f-4f6d-8a80-80607694bbc0",
    "metadata": {},
    "outputs": [],
@@ -141,17 +142,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
+   "id": "f343c5da-8a70-45d1-9b78-24715fdcc70f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lsi_reduced_docs_file_path = './backups/documents_lsi.pkl'\n",
+    "with open(lsi_reduced_docs_file_path, 'rb') as file:\n",
+    "    documents_reduced = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c05190fa-3f5a-40c3-86dd-b609432e49b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lsi_reduced_queries_file_path = './backups/queries_lsi.pkl'\n",
+    "with open(lsi_reduced_queries_file_path, 'rb') as file:\n",
+    "    queries_reduced = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "aad306ab-0466-43cd-a3ad-9bc3ba366044",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing similarity scores: 112it [00:00, 232.88it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cosine_similarity(a, b):\n",
+    "    return np.dot(a, b) / (np.linalg.norm(a) * np.linalg.norm(b))\n",
+    "\n",
+    "# Calculate cosine similarity for each query-document pair\n",
+    "similarity_scores = {}\n",
+    "for query_id, query in tqdm(enumerate(queries_reduced), desc = 'Computing similarity scores'):\n",
+    "    scores = []\n",
+    "    for doc_id, doc in enumerate(documents_reduced):\n",
+    "        sim_score = cosine_similarity(query, doc)\n",
+    "        scores.append((doc_id, sim_score))\n",
+    "    similarity_scores[query_id] = sorted(scores, key=lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "18fe70ae-c732-4d8f-a6d0-25d231e3d96f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = [0]*len(similarity_scores)\n",
+    "for idx, scores in similarity_scores.items():\n",
+    "    scores_flattened = [doc for doc,score in scores]\n",
+    "    predictions[idx] = scores_flattened"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "300a1973-0219-4325-8601-51886ac04f07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "e00668d4-0650-4dd5-934a-2bca0a29f27e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load index from file\n",
-    "loaded_faiss_vs = FAISS.load_local(\n",
-    "    folder_path=\"./backups/faiss/\",\n",
-    "    embeddings=OpenAIEmbeddings())\n",
+    "# # Load index from file\n",
+    "# loaded_faiss_vs = FAISS.load_local(\n",
+    "#     folder_path=\"./backups/faiss/\",\n",
+    "#     embeddings=OpenAIEmbeddings())\n",
     "\n",
-    "retriever = loaded_faiss_vs.as_retriever(search_kwargs={'k': 10})\n",
+    "# retriever = loaded_faiss_vs.as_retriever(search_kwargs={'k': 10})\n",
     "\n",
     "# Define the RAG pipeline\n",
     "template = \"\"\"\n",
@@ -163,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "3f7a5756-298f-425d-be0e-8816c168a055",
    "metadata": {},
    "outputs": [],
@@ -179,12 +253,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "e9b67855-db6b-42a7-8c38-20ca81eaaeca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "chain = ({\"context\": retriever | format_docs, \"question\": RunnablePassthrough()} \n",
+    "chain = ({\"context\": RunnablePassthrough(), \"question\": RunnablePassthrough()} \n",
     "         | prompt \n",
     "         | llm \n",
     "         | StrOutputParser())"
@@ -192,28 +266,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "31ab46da-3217-41c2-aa0f-6518e6935a25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nThe Technology of Library and Information Networks is a topic that explores the various technologies used to facilitate the storage, retrieval, and dissemination of information in libraries. This includes physical infrastructure such as servers and routers, as well as software systems that enable the organization and search of information. \\n\\nIn the context of this article, the focus is on online library network technology. This refers to the use of computer networks and internet technology to connect libraries and allow for the sharing of resources and information. The article distinguishes between three types of library networks: search services, customized services, and service centers. \\n\\nSearch services, provided by companies like SDC and Lockheed, allow users to search for information across multiple libraries and databases. This enables more efficient and comprehensive access to information. \\n\\nCustomized services, offered by organizations like OCLC and RLIN, provide access to bibliographic files and other specialized resources. These services are tailored to the needs of specific libraries and their users. \\n\\nService centers, such as NELINET and INCOLSA, act as intermediaries between libraries and provide support for various network operations. They often offer training, technical support, and other services to help libraries utilize network technology effectively. \\n\\nThe article also predicts that as technology continues to evolve, more services will be'"
+       "'Answer: The use of electronic data processing equipment has been suggested as a potential solution to the mounting arrearages and other processing difficulties faced by research libraries, such as the Library of Congress. Representatives of computer firms have conducted studies indicating that certain areas of library operations could benefit from automation.'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chain.invoke(queries[66])"
+    "mquery_id = 2\n",
+    "# print(queries[mquery_id])\n",
+    "context_str = '\\n\\n\\n'.join([docs[doc_id]['body'] for doc_id in predictions[mquery_id][:8]])\n",
+    "input_data = {\"context\": context_str, \"query\": queries[mquery_id]}\n",
+    "chain.invoke(input_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "ba9db072-d4e4-4e3a-bff5-735e79954315",
    "metadata": {},
    "outputs": [
@@ -221,7 +299,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Asking Queries to ChatGPT with RAG: 100%|██████████████████████████████| 76/76 [04:35<00:00,  3.63s/it]\n"
+      "Asking Queries to ChatGPT with RAG: 100%|██████████████████████████████| 76/76 [05:03<00:00,  3.99s/it]\n"
      ]
     }
    ],
@@ -233,13 +311,15 @@
     "# Run RAG pipeline for every question\n",
     "for query_id in tqdm(rel_set.keys(), desc = 'Asking Queries to ChatGPT with RAG'):\n",
     "    query_text = queries[int(query_id)]\n",
-    "    response = chain.invoke(query_text)\n",
+    "    context_str = '\\n\\n\\n'.join([docs[doc_id]['body'] for doc_id in predictions[int(query_id)]])[:4096]\n",
+    "    input_data = {\"context\": context_str, \"query\": queries[int(query_id)]}\n",
+    "    response = chain.invoke(input_data)\n",
     "    rag_responses[query_id] = response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "id": "89478ca1-3feb-43e0-83a5-d346aa677657",
    "metadata": {},
    "outputs": [
@@ -257,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "id": "bb7a72be-5f6b-446e-bb7b-63ad8a8d31db",
    "metadata": {},
    "outputs": [
@@ -265,14 +345,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RAG responses saved to ./backups/openai_with_rag_responsesgpt-3.5-turbo-instruct.pkl\n"
+      "RAG responses saved to ./backups/lsi_openai_with_rag_responses_gpt-3.5-turbo-instruct.pkl\n"
      ]
     }
    ],
    "source": [
     "#### DUMP OVERWRITE WARNING ####\n",
     "\n",
-    "rag_responses_file_path = './backups/openai_with_rag_responses_' + model + '.pkl'\n",
+    "rag_responses_file_path = './backups/lsi_openai_with_rag_responses_' + model + '.pkl'\n",
     "with open(rag_responses_file_path, 'wb') as file:\n",
     "    pickle.dump(rag_responses, file)\n",
     "\n",
@@ -281,41 +361,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "69543307-aca1-4247-94a8-1cd6dd983553",
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai_with_rag_responses_file_path = './backups/openai_with_rag_responses_' + model + '.pkl'\n",
+    "openai_with_rag_responses_file_path = './backups/lsi_openai_with_rag_responses_' + model + '.pkl'\n",
     "with open(openai_with_rag_responses_file_path, 'rb') as file:\n",
     "    rag_responses = pickle.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "694673f9-44bb-47ff-9fc6-1045afff7035",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nCo-Citation Context Analysis is a method used to identify and analyze paradigms in information science. This method involves using citation analysis techniques to identify patterns in the use of specific concepts within a set of papers pertaining to a particular topic. The identified concepts are then mapped onto a graph, with each concept represented as a node and their relationships represented as lines connecting them. This graph displays the structure of the concepts and the frequency of their occurrence, providing a measure of consensus within the corpus.\\n\\nThe purpose of this approach is to identify and understand the intellectual perspectives or paradigms that exist within a particular field of study. These paradigms are often shared by groups of scientists, known as invisible colleges, who are in frequent communication with one another and have specialized knowledge in a specific subject matter.\\n\\nTo operationalize the notion of paradigms, the paper proposes the concept of a \"consensual structure of concepts in a field.\" This means that there is a general agreement among scientists on the use and combination of certain concepts within the corpus. For example, if two concepts, A and B, are frequently used together in a specific manner within the papers, it can be considered a consensus within the corpus.\\n\\nThe identified structure of concepts can be displayed as a graph, with the frequency'"
+       "\"Answer: It can be a challenging task to create descriptive titles for articles, as they must accurately represent the content of the article while also being concise enough to catch the reader's attention. One of the main difficulties in automatically retrieving articles from approximate titles is that the titles may not always accurately reflect the content of the article. This can lead to irrelevant or incorrect results being retrieved. The usual relevance of the content of articles to their titles can vary, as some titles may accurately represent the content while others may only provide a general idea. This is why it is important for titles to be carefully chosen to accurately represent the content of the article.\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     " # Sanity\n",
-    "rag_responses['90']"
+    "rag_responses['1']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "id": "ecff5f07-b4d6-4e54-bf87-0d851c3ae049",
    "metadata": {},
    "outputs": [
@@ -325,7 +405,7 @@
        "\".W\\n   The present study is a history of the DEWEY Decimal\\nClassification.  The first edition of the DDC was published\\nin 1876, the eighteenth edition in 1971, and future editions\\nwill continue to appear as needed.  In spite of the DDC's\\nlong and healthy life, however, its full story has never\\nbeen told.  There have been biographies of Dewey\\nthat briefly describe his system, but this is the first\\nattempt to provide a detailed history of the work that\\nmore than any other has spurred the growth of\\nlibrarianship in this country and abroad.\\n\""
       ]
      },
-     "execution_count": 16,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "id": "86e89275-062c-49f8-ab9b-ad6bd50f4c89",
    "metadata": {},
    "outputs": [
@@ -344,8 +424,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean BLEU Score: 0.7937\n",
-      "Mean ROUGE Score: 0.2425\n"
+      "Mean BLEU Score: 0.7441\n",
+      "Mean ROUGE Score: 0.2167\n"
      ]
     }
    ],
