Add logic for ir techniques

--- a/src/cisi/notebooks/generate_embeddings.ipynb
+++ b/src/cisi/notebooks/generate_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "d5c84322-ebd8-4aab-9bf0-108ade3a023c",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "documents_lsi = {id: vector for id, vector in zip(document_ids, documents_lsi_vectors)}"
+    "documents_lsi = {id: {\"embedding\": vector} for id, vector in zip(document_ids, documents_lsi_vectors)}"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "queries_lsi = {id: vector for id, vector in zip(query_ids, queries_lsi_vectors)}"
+    "queries_lsi = {id: {\"embedding\": vector} for id, vector in zip(query_ids, queries_lsi_vectors)}"
    ]
   },
   {
